tests/bad_programs/type_errors/void_param.nc
bool fun(void param) {
    return true;
}

int main() {
    return 0;
}
